# agent-ui

./: .gitignore  CHANGELOG.md  CLEANUP_COMPLETE.md  Cargo.toml  README.md  WEB_VERSION_COMPLETE.md
gpui/: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  INPUT_BUG_FIX.md  README.md  SCRIPTS_SETUP_COMPLETE.md  dev
gpui/scripts/: DEV_WORKFLOW.md  README.md  SCRIPTS_README.md  build.sh  dev.sh  run.sh  test.sh  watch.sh
gpui/src/: assets.rs  keybindings.rs  lib.rs  main.rs  theme.rs  workspace.rs
gpui/src/agent/: mod.rs  service.rs  tools.rs  types.rs
gpui/src/components/: assistant_panel.rs  conversation.rs  message_input.rs  message_list.rs  mod.rs  text_input.rs
gpui/src/crates/chatbox/: Cargo.toml  README.md  UI_PREVIEW.md
gpui/src/crates/chatbox/examples/: basic_test.rs  basic_ui.rs  chatbox_ui.rs  demo.rs  final_demo.rs  final_interactive.rs  input_test.rs  interactive_chatbox_demo.rs  interactive_demo.rs  interactive_showcase.rs  minimal_demo.rs  minimal_interactive.rs  preview.rs  pure_ui.rs  showcase.rs  simple_demo.rs  simple_input.rs  simple_interactive.rs  simple_preview.rs  standalone_chatbox.rs  standalone_demo.rs  standalone_ui.rs  working_chatbox.rs  working_chatbox_input.rs  working_demo.rs  working_interactive.rs  working_simple.rs
gpui/src/crates/chatbox/examples/minimal_demo/: Cargo.toml
gpui/src/crates/chatbox/examples/minimal_demo/src/: main.rs
gpui/src/crates/chatbox/src/: chat_view.rs  copilot_chat.rs  interactive_chatbox.rs  lib.rs  message_editor.rs
gpui/src/models/: message.rs
gpui/src/state/: conversation.rs  mod.rs
(+37 files in other folders)
