[package]
name = "agent-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_ui"
path = "src/lib.rs"

[dependencies]
# GPUI framework
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async streams
futures = "0.3"
async-stream = "0.3"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Unicode segmentation for text editing
unicode-segmentation = "1.12"
