[package]
name = "chatbox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core UI dependencies
gpui = { path = "../gpui" }
ui = { path = "../ui" }
editor = { path = "../editor" }
theme = { path = "../theme" }
settings = { path = "../settings" }
util = { path = "../util" }
language = { path = "../language" }
collections = { path = "../collections" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[lib]
path = "src/lib.rs"